--- a/css/main.css
+++ b/css/main.css
@@ -1282,7 +1282,7 @@ input::-moz-focus-inner {
 }
 
 .section-intro {
-    max-width: 700px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -1815,8 +1815,8 @@ header .logo a {
 
 .intro-info {
     margin-top: 4.2rem;
-    margin-right: -10px;
-    margin-left: -30px;
+    /*margin-right: -10px;*/
+    margin-left: -20px;
 }
 
 .intro-info img {
