--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,10 @@
     z-index: 0;
 }
 
+.headshot {
+    padding-top: 5rem;
+}
+
 
 /** 
  * ===================================================================
